<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_word_list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_word_list" />
        <item
            android:id="@+id/nav_word_study"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_word_study" />
        <item
            android:id="@+id/nav_word_review"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_word_review" />
        <item
            android:id="@+id/nav_word_input"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_word_input" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_settings" />
    </group>
</menu>