<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_word_list"
        android:icon="@drawable/ic_list"
        android:title="@string/title_word_list" />
    <item
        android:id="@+id/navigation_word_study"
        android:icon="@drawable/ic_study"
        android:title="@string/title_word_study" />
    <item
        android:id="@+id/navigation_word_review"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="复习" />
    <item
        android:id="@+id/navigation_word_input"
        android:icon="@drawable/ic_add"
        android:title="@string/title_word_input" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
</menu> 