<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_word_list">

    <fragment
        android:id="@+id/navigation_word_list"
        android:name="com.jamshao.sonicwords.ui.wordlist.WordListFragment"
        android:label="@string/title_word_list"
        tools:layout="@layout/fragment_word_list" />

    <fragment
        android:id="@+id/navigation_word_study"
        android:name="com.jamshao.sonicwords.ui.wordstudy.WordStudyFragment"
        android:label="@string/title_word_study"
        tools:layout="@layout/fragment_word_study" />

    <fragment
        android:id="@+id/navigation_word_input"
        android:name="com.jamshao.sonicwords.ui.input.WordInputFragment"
        android:label="@string/title_word_input"
        tools:layout="@layout/fragment_word_input" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.jamshao.sonicwords.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation> 